--- a/platformio.ini
+++ b/platformio.ini
@@ -1,44 +1,44 @@
 ; PlatformIO Project Configuration File
 ;
-;   Build options: build flags, source filter, extra scripting
-;   Upload options: custom port, speed and extra flags
+;   Build options: build flags, source filter
+;   Upload options: custom upload port, speed and extra flags
 ;   Library options: dependencies, extra library storages
+;   Advanced options: extra scripting
 ;
 ; Please visit documentation for the other options and examples
-; http://docs.platformio.org/en/stable/projectconf.html
+; https://docs.platformio.org/page/projectconf.html
 
 [platformio]
-#default_envs = openevse
-src_dir = firmware/open_evse
+default_envs = openevse_eu
+src_dir = firmware\open_evse
 
 [common]
-lib_deps =
+lib_deps = 
 upload_protocol = usbasp
 upload_flags = "-e -B0.5"
 version = 8.2.0
 build_flags = 
-  -D OEV6
-  -D RELAY_PWM
-  -D SHOW_DISABLED_TESTS
-  -D AMMETER
-  -D RAPI
-  -D RAPI_SERIAL
-  -D RAPI_WF
-  -D RAPI_BTN
-  -D TIME_LIMIT
-  -D CHARGE_LIMIT
-  -D MENNEKES_LOCK
-us_build_flags =
-  ${common.build_flags}
-  -D AUTOSVCLEVEL
-eu_build_flags =
-  ${common.build_flags}
-  -D NO_AUTOSVCLEVEL
-  -D PERIODIC_LCD_REFRESH_MS=120000UL
-  -D DEFAULT_CURRENT_CAPACITY_L2=32
-  -D MAX_CURRENT_CAPACITY_L2=32
+	-D OEV6
+	-D RELAY_PWM
+	-D SHOW_DISABLED_TESTS
+	-D AMMETER
+	-D RAPI
+	-D RAPI_SERIAL
+	-D RAPI_WF
+	-D RAPI_BTN
+	-D TIME_LIMIT
+	-D CHARGE_LIMIT
+	-D MENNEKES_LOCK
+us_build_flags = 
+	${common.build_flags}
+	-D AUTOSVCLEVEL
+eu_build_flags = 
+	${common.build_flags}
+	-D NO_AUTOSVCLEVEL
+	-D PERIODIC_LCD_REFRESH_MS=120000UL
+	-D DEFAULT_CURRENT_CAPACITY_L2=32
+	-D MAX_CURRENT_CAPACITY_L2=32
 
-# Arduino 1.6.17 - requires Python 2
 [env:openevse_1-6-17]
 platform = atmelavr@1.4.1
 board = openevse
@@ -46,10 +46,8 @@ framework = arduino
 lib_deps = ${common.lib_deps}
 upload_protocol = ${common.upload_protocol}
 upload_flags = ${common.upload_flags}
-src_build_flags=
-  ${common.us_build_flags}
+src_build_flags = ${common.us_build_flags}
 
-# Arduino 1.6.23
 [env:openevse_1-6-23]
 platform = atmelavr@1.15.0
 board = openevse
@@ -57,8 +55,7 @@ framework = arduino
 lib_deps = ${common.lib_deps}
 upload_protocol = ${common.upload_protocol}
 upload_flags = ${common.upload_flags}
-src_build_flags=
-  ${common.us_build_flags}
+src_build_flags = ${common.us_build_flags}
 
 [env:openevse_1-8-3]
 platform = atmelavr@3.4.0
@@ -67,8 +64,7 @@ framework = arduino
 lib_deps = ${common.lib_deps}
 upload_protocol = ${common.upload_protocol}
 upload_flags = ${common.upload_flags}
-src_build_flags=
-  ${common.us_build_flags}
+src_build_flags = ${common.us_build_flags}
 
 [env:openevse_latest]
 platform = atmelavr
@@ -77,35 +73,31 @@ framework = arduino
 lib_deps = ${common.lib_deps}
 upload_protocol = ${common.upload_protocol}
 upload_flags = ${common.upload_flags}
-src_build_flags=
-  ${common.us_build_flags}
+src_build_flags = ${common.us_build_flags}
 
 [env:openevse]
 extends = env:openevse_1-8-3
-src_build_flags=
-  ${common.us_build_flags}
-  -D 'VERSION="${common.version}"'
+src_build_flags = 
+	${common.us_build_flags}
+	-D 'VERSION="${common.version}"'
 
-# EU OpenEVSE
 [env:openevse_eu]
 extends = env:openevse
-src_build_flags=
-  ${common.eu_build_flags}
-  -D 'VERSION="${common.version}.EU"'
+src_build_flags = 
+	${common.eu_build_flags}
+	-D 'VERSION="${common.version}.EU"'
 
-# Non-tethered T2 EmonEVSE single-phase
 [env:emonevse]
 extends = env:openevse
-src_build_flags=
-  ${common.eu_build_flags}
-  -D PP_AUTO_AMPACITY
-  -D 'VERSION="${common.version}.T2"'
+src_build_flags = 
+	${common.eu_build_flags}
+	-D PP_AUTO_AMPACITY
+	-D 'VERSION="${common.version}.T2"'
 
-# Non-tethered T2 EmonEVSE three-phase
 [env:emonevse_3ph]
 extends = env:openevse
-src_build_flags=
-  ${common.eu_build_flags}
-  -D PP_AUTO_AMPACITY
-  -D THREEPHASE
-  -D 'VERSION="${common.version}.3P"'
+src_build_flags = 
+	${common.eu_build_flags}
+	-D PP_AUTO_AMPACITY
+	-D THREEPHASE
+	-D 'VERSION="${common.version}.3P"'
