--- a/platformio.ini
+++ b/platformio.ini
@@ -9,12 +9,12 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [platformio]
-default_envs = openevse_eu
 src_dir = firmware/open_evse
+default_envs = openevse_eu
 
 [common]
 lib_deps = 
-upload_protocol = usbasp
+upload_protocol = usbasp-clone
 upload_flags = "-e -B0.5"
 version = 8.2.0
 build_flags = 
