--- a/platformio.ini
+++ b/platformio.ini
@@ -86,6 +86,7 @@ extends = env:openevse
 src_build_flags = 
 	${common.eu_build_flags}
 	-D 'VERSION="${common.version}.EU"'
+;	-D AUTH_LOCK
 
 [env:emonevse]
 extends = env:openevse
